# ProgramowanieObiektowe

./: .gitignore  CMakeLists.txt  README.md
.run/: OwnExcel.run.xml
Header Files/: array.h  array_display.h  menu.h  operation_handler.h  sheet.h
Models/: Cell.cpp  Cell.h  CellValue.cpp  CellValue.h  DecimalCell.cpp  DecimalCell.h  Identifier.cpp  Identifier.h  TextCell.cpp  TextCell.h
Source Files/: array.cpp  array_display.cpp  main.cpp  menu.cpp  operation_handler.cpp  sheet.cpp
